adding edit , delete on exams

--- a/Client/src/Instructor/Components/QuestionPopup/QuestionPopup.css
+++ b/Client/src/Instructor/Components/QuestionPopup/QuestionPopup.css
@@ -27,7 +27,7 @@ body {
     justify-content: center;
     padding: 4px;
     background-color: crimson;
-    color: rgb(87, 26, 26);
+    color: white;
     border-radius: 5px;
     cursor: pointer;
 }
